// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`if 1 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"IfStatement\\": [
      {
        \\"name\\": \\"IfStatement\\",
        \\"children\\": {
          \\"IfToken\\": [
            {
              \\"image\\": \\"if:\\",
              \\"startOffset\\": 5,
              \\"endOffset\\": 7,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 5,
              \\"endColumn\\": 7,
              \\"tokenTypeIdx\\": 31,
              \\"tokenType\\": {
                \\"name\\": \\"IfToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 31,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"conditionalExpression\\": [
            {
              \\"name\\": \\"RelationExpression\\",
              \\"children\\": {
                \\"Expression\\": [
                  {
                    \\"name\\": \\"Expression\\",
                    \\"children\\": {
                      \\"Term\\": [
                        {
                          \\"name\\": \\"Term\\",
                          \\"children\\": {
                            \\"Factor\\": [
                              {
                                \\"name\\": \\"Factor\\",
                                \\"children\\": {
                                  \\"Identifier\\": [
                                    {
                                      \\"image\\": \\"x\\",
                                      \\"startOffset\\": 8,
                                      \\"endOffset\\": 8,
                                      \\"startLine\\": 2,
                                      \\"endLine\\": 2,
                                      \\"startColumn\\": 8,
                                      \\"endColumn\\": 8,
                                      \\"tokenTypeIdx\\": 8,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Identifier\\",
                                        \\"PATTERN\\": {},
                                        \\"tokenTypeIdx\\": 8,
                                        \\"CATEGORIES\\": [],
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"LCurly\\": [
            {
              \\"image\\": \\"{\\",
              \\"startOffset\\": 10,
              \\"endOffset\\": 10,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 10,
              \\"endColumn\\": 10,
              \\"tokenTypeIdx\\": 11,
              \\"tokenType\\": {
                \\"name\\": \\"LCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 11,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"{\\"
              }
            }
          ],
          \\"BlockStatement\\": [
            {
              \\"name\\": \\"BlockStatement\\",
              \\"children\\": {
                \\"statement\\": [
                  {
                    \\"name\\": \\"Assignment\\",
                    \\"children\\": {
                      \\"ToRight\\": [
                        {
                          \\"name\\": \\"ToRight\\",
                          \\"children\\": {
                            \\"from\\": [
                              {
                                \\"name\\": \\"Pipe\\",
                                \\"children\\": {
                                  \\"from\\": [
                                    {
                                      \\"name\\": \\"PipeFrom\\",
                                      \\"children\\": {
                                        \\"RelationExpression\\": [
                                          {
                                            \\"name\\": \\"RelationExpression\\",
                                            \\"children\\": {
                                              \\"Expression\\": [
                                                {
                                                  \\"name\\": \\"Expression\\",
                                                  \\"children\\": {
                                                    \\"Term\\": [
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"Identifier\\": [
                                                                  {
                                                                    \\"image\\": \\"x\\",
                                                                    \\"startOffset\\": 18,
                                                                    \\"endOffset\\": 18,
                                                                    \\"startLine\\": 3,
                                                                    \\"endLine\\": 3,
                                                                    \\"startColumn\\": 7,
                                                                    \\"endColumn\\": 7,
                                                                    \\"tokenTypeIdx\\": 8,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"Identifier\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 8,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      },
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"Identifier\\": [
                                                                  {
                                                                    \\"image\\": \\"x\\",
                                                                    \\"startOffset\\": 22,
                                                                    \\"endOffset\\": 22,
                                                                    \\"startLine\\": 3,
                                                                    \\"endLine\\": 3,
                                                                    \\"startColumn\\": 11,
                                                                    \\"endColumn\\": 11,
                                                                    \\"tokenTypeIdx\\": 8,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"Identifier\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 8,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ],
                                                    \\"AdditionOperator\\": [
                                                      {
                                                        \\"image\\": \\"+\\",
                                                        \\"startOffset\\": 20,
                                                        \\"endOffset\\": 20,
                                                        \\"startLine\\": 3,
                                                        \\"endLine\\": 3,
                                                        \\"startColumn\\": 9,
                                                        \\"endColumn\\": 9,
                                                        \\"tokenTypeIdx\\": 18,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"Plus\\",
                                                          \\"PATTERN\\": {},
                                                          \\"CATEGORIES\\": [
                                                            {
                                                              \\"name\\": \\"AdditionOperator\\",
                                                              \\"PATTERN\\": {},
                                                              \\"tokenTypeIdx\\": 17,
                                                              \\"CATEGORIES\\": [],
                                                              \\"categoryMatches\\": [
                                                                18,
                                                                19
                                                              ],
                                                              \\"categoryMatchesMap\\": {
                                                                \\"18\\": true,
                                                                \\"19\\": true
                                                              },
                                                              \\"isParent\\": true
                                                            }
                                                          ],
                                                          \\"tokenTypeIdx\\": 18,
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"tail\\": [
                                    {
                                      \\"name\\": \\"PipeTail\\",
                                      \\"children\\": {}
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"RCurly\\": [
            {
              \\"image\\": \\"}\\",
              \\"startOffset\\": 28,
              \\"endOffset\\": 28,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 5,
              \\"endColumn\\": 5,
              \\"tokenTypeIdx\\": 12,
              \\"tokenType\\": {
                \\"name\\": \\"RCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 12,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"}\\"
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`if 2 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"IfStatement\\": [
      {
        \\"name\\": \\"IfStatement\\",
        \\"children\\": {
          \\"IfToken\\": [
            {
              \\"image\\": \\"if:\\",
              \\"startOffset\\": 5,
              \\"endOffset\\": 7,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 5,
              \\"endColumn\\": 7,
              \\"tokenTypeIdx\\": 31,
              \\"tokenType\\": {
                \\"name\\": \\"IfToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 31,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"conditionalExpression\\": [
            {
              \\"name\\": \\"RelationExpression\\",
              \\"children\\": {
                \\"Expression\\": [
                  {
                    \\"name\\": \\"Expression\\",
                    \\"children\\": {
                      \\"Term\\": [
                        {
                          \\"name\\": \\"Term\\",
                          \\"children\\": {
                            \\"Factor\\": [
                              {
                                \\"name\\": \\"Factor\\",
                                \\"children\\": {
                                  \\"Identifier\\": [
                                    {
                                      \\"image\\": \\"x\\",
                                      \\"startOffset\\": 8,
                                      \\"endOffset\\": 8,
                                      \\"startLine\\": 2,
                                      \\"endLine\\": 2,
                                      \\"startColumn\\": 8,
                                      \\"endColumn\\": 8,
                                      \\"tokenTypeIdx\\": 8,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Identifier\\",
                                        \\"PATTERN\\": {},
                                        \\"tokenTypeIdx\\": 8,
                                        \\"CATEGORIES\\": [],
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"LCurly\\": [
            {
              \\"image\\": \\"{\\",
              \\"startOffset\\": 10,
              \\"endOffset\\": 10,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 10,
              \\"endColumn\\": 10,
              \\"tokenTypeIdx\\": 11,
              \\"tokenType\\": {
                \\"name\\": \\"LCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 11,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"{\\"
              }
            },
            {
              \\"image\\": \\"{\\",
              \\"startOffset\\": 35,
              \\"endOffset\\": 35,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 12,
              \\"endColumn\\": 12,
              \\"tokenTypeIdx\\": 11,
              \\"tokenType\\": {
                \\"name\\": \\"LCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 11,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"{\\"
              }
            }
          ],
          \\"BlockStatement\\": [
            {
              \\"name\\": \\"BlockStatement\\",
              \\"children\\": {
                \\"statement\\": [
                  {
                    \\"name\\": \\"Assignment\\",
                    \\"children\\": {
                      \\"ToRight\\": [
                        {
                          \\"name\\": \\"ToRight\\",
                          \\"children\\": {
                            \\"from\\": [
                              {
                                \\"name\\": \\"Pipe\\",
                                \\"children\\": {
                                  \\"from\\": [
                                    {
                                      \\"name\\": \\"PipeFrom\\",
                                      \\"children\\": {
                                        \\"RelationExpression\\": [
                                          {
                                            \\"name\\": \\"RelationExpression\\",
                                            \\"children\\": {
                                              \\"Expression\\": [
                                                {
                                                  \\"name\\": \\"Expression\\",
                                                  \\"children\\": {
                                                    \\"Term\\": [
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"Identifier\\": [
                                                                  {
                                                                    \\"image\\": \\"x\\",
                                                                    \\"startOffset\\": 18,
                                                                    \\"endOffset\\": 18,
                                                                    \\"startLine\\": 3,
                                                                    \\"endLine\\": 3,
                                                                    \\"startColumn\\": 7,
                                                                    \\"endColumn\\": 7,
                                                                    \\"tokenTypeIdx\\": 8,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"Identifier\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 8,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      },
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"Identifier\\": [
                                                                  {
                                                                    \\"image\\": \\"x\\",
                                                                    \\"startOffset\\": 22,
                                                                    \\"endOffset\\": 22,
                                                                    \\"startLine\\": 3,
                                                                    \\"endLine\\": 3,
                                                                    \\"startColumn\\": 11,
                                                                    \\"endColumn\\": 11,
                                                                    \\"tokenTypeIdx\\": 8,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"Identifier\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 8,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ],
                                                    \\"AdditionOperator\\": [
                                                      {
                                                        \\"image\\": \\"+\\",
                                                        \\"startOffset\\": 20,
                                                        \\"endOffset\\": 20,
                                                        \\"startLine\\": 3,
                                                        \\"endLine\\": 3,
                                                        \\"startColumn\\": 9,
                                                        \\"endColumn\\": 9,
                                                        \\"tokenTypeIdx\\": 18,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"Plus\\",
                                                          \\"PATTERN\\": {},
                                                          \\"CATEGORIES\\": [
                                                            {
                                                              \\"name\\": \\"AdditionOperator\\",
                                                              \\"PATTERN\\": {},
                                                              \\"tokenTypeIdx\\": 17,
                                                              \\"CATEGORIES\\": [],
                                                              \\"categoryMatches\\": [
                                                                18,
                                                                19
                                                              ],
                                                              \\"categoryMatchesMap\\": {
                                                                \\"18\\": true,
                                                                \\"19\\": true
                                                              },
                                                              \\"isParent\\": true
                                                            }
                                                          ],
                                                          \\"tokenTypeIdx\\": 18,
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"tail\\": [
                                    {
                                      \\"name\\": \\"PipeTail\\",
                                      \\"children\\": {}
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            },
            {
              \\"name\\": \\"BlockStatement\\",
              \\"children\\": {
                \\"statement\\": [
                  {
                    \\"name\\": \\"Assignment\\",
                    \\"children\\": {
                      \\"ToRight\\": [
                        {
                          \\"name\\": \\"ToRight\\",
                          \\"children\\": {
                            \\"from\\": [
                              {
                                \\"name\\": \\"Pipe\\",
                                \\"children\\": {
                                  \\"from\\": [
                                    {
                                      \\"name\\": \\"PipeFrom\\",
                                      \\"children\\": {
                                        \\"RelationExpression\\": [
                                          {
                                            \\"name\\": \\"RelationExpression\\",
                                            \\"children\\": {
                                              \\"Expression\\": [
                                                {
                                                  \\"name\\": \\"Expression\\",
                                                  \\"children\\": {
                                                    \\"Term\\": [
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"Identifier\\": [
                                                                  {
                                                                    \\"image\\": \\"x\\",
                                                                    \\"startOffset\\": 43,
                                                                    \\"endOffset\\": 43,
                                                                    \\"startLine\\": 5,
                                                                    \\"endLine\\": 5,
                                                                    \\"startColumn\\": 7,
                                                                    \\"endColumn\\": 7,
                                                                    \\"tokenTypeIdx\\": 8,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"Identifier\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 8,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      },
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"Identifier\\": [
                                                                  {
                                                                    \\"image\\": \\"x\\",
                                                                    \\"startOffset\\": 47,
                                                                    \\"endOffset\\": 47,
                                                                    \\"startLine\\": 5,
                                                                    \\"endLine\\": 5,
                                                                    \\"startColumn\\": 11,
                                                                    \\"endColumn\\": 11,
                                                                    \\"tokenTypeIdx\\": 8,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"Identifier\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 8,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ],
                                                    \\"AdditionOperator\\": [
                                                      {
                                                        \\"image\\": \\"-\\",
                                                        \\"startOffset\\": 45,
                                                        \\"endOffset\\": 45,
                                                        \\"startLine\\": 5,
                                                        \\"endLine\\": 5,
                                                        \\"startColumn\\": 9,
                                                        \\"endColumn\\": 9,
                                                        \\"tokenTypeIdx\\": 19,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"Minus\\",
                                                          \\"PATTERN\\": {},
                                                          \\"CATEGORIES\\": [
                                                            {
                                                              \\"name\\": \\"AdditionOperator\\",
                                                              \\"PATTERN\\": {},
                                                              \\"tokenTypeIdx\\": 17,
                                                              \\"CATEGORIES\\": [],
                                                              \\"categoryMatches\\": [
                                                                18,
                                                                19
                                                              ],
                                                              \\"categoryMatchesMap\\": {
                                                                \\"18\\": true,
                                                                \\"19\\": true
                                                              },
                                                              \\"isParent\\": true
                                                            }
                                                          ],
                                                          \\"tokenTypeIdx\\": 19,
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"tail\\": [
                                    {
                                      \\"name\\": \\"PipeTail\\",
                                      \\"children\\": {}
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"RCurly\\": [
            {
              \\"image\\": \\"}\\",
              \\"startOffset\\": 28,
              \\"endOffset\\": 28,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 5,
              \\"endColumn\\": 5,
              \\"tokenTypeIdx\\": 12,
              \\"tokenType\\": {
                \\"name\\": \\"RCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 12,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"}\\"
              }
            },
            {
              \\"image\\": \\"}\\",
              \\"startOffset\\": 53,
              \\"endOffset\\": 53,
              \\"startLine\\": 6,
              \\"endLine\\": 6,
              \\"startColumn\\": 5,
              \\"endColumn\\": 5,
              \\"tokenTypeIdx\\": 12,
              \\"tokenType\\": {
                \\"name\\": \\"RCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 12,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"}\\"
              }
            }
          ],
          \\"ElseToken\\": [
            {
              \\"image\\": \\"else\\",
              \\"startOffset\\": 30,
              \\"endOffset\\": 33,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 7,
              \\"endColumn\\": 10,
              \\"tokenTypeIdx\\": 32,
              \\"tokenType\\": {
                \\"name\\": \\"ElseToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 32,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`if 3 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"IfStatement\\": [
      {
        \\"name\\": \\"IfStatement\\",
        \\"children\\": {
          \\"IfToken\\": [
            {
              \\"image\\": \\"if:\\",
              \\"startOffset\\": 5,
              \\"endOffset\\": 7,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 5,
              \\"endColumn\\": 7,
              \\"tokenTypeIdx\\": 31,
              \\"tokenType\\": {
                \\"name\\": \\"IfToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 31,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"conditionalExpression\\": [
            {
              \\"name\\": \\"RelationExpression\\",
              \\"children\\": {
                \\"Expression\\": [
                  {
                    \\"name\\": \\"Expression\\",
                    \\"children\\": {
                      \\"Term\\": [
                        {
                          \\"name\\": \\"Term\\",
                          \\"children\\": {
                            \\"Factor\\": [
                              {
                                \\"name\\": \\"Factor\\",
                                \\"children\\": {
                                  \\"Identifier\\": [
                                    {
                                      \\"image\\": \\"x\\",
                                      \\"startOffset\\": 8,
                                      \\"endOffset\\": 8,
                                      \\"startLine\\": 2,
                                      \\"endLine\\": 2,
                                      \\"startColumn\\": 8,
                                      \\"endColumn\\": 8,
                                      \\"tokenTypeIdx\\": 8,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Identifier\\",
                                        \\"PATTERN\\": {},
                                        \\"tokenTypeIdx\\": 8,
                                        \\"CATEGORIES\\": [],
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"LCurly\\": [
            {
              \\"image\\": \\"{\\",
              \\"startOffset\\": 10,
              \\"endOffset\\": 10,
              \\"startLine\\": 2,
              \\"endLine\\": 2,
              \\"startColumn\\": 10,
              \\"endColumn\\": 10,
              \\"tokenTypeIdx\\": 11,
              \\"tokenType\\": {
                \\"name\\": \\"LCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 11,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"{\\"
              }
            },
            {
              \\"image\\": \\"{\\",
              \\"startOffset\\": 78,
              \\"endOffset\\": 78,
              \\"startLine\\": 6,
              \\"endLine\\": 6,
              \\"startColumn\\": 12,
              \\"endColumn\\": 12,
              \\"tokenTypeIdx\\": 11,
              \\"tokenType\\": {
                \\"name\\": \\"LCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 11,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"{\\"
              }
            }
          ],
          \\"BlockStatement\\": [
            {
              \\"name\\": \\"BlockStatement\\",
              \\"children\\": {
                \\"statement\\": [
                  {
                    \\"name\\": \\"Assignment\\",
                    \\"children\\": {
                      \\"ToRight\\": [
                        {
                          \\"name\\": \\"ToRight\\",
                          \\"children\\": {
                            \\"from\\": [
                              {
                                \\"name\\": \\"Pipe\\",
                                \\"children\\": {
                                  \\"from\\": [
                                    {
                                      \\"name\\": \\"PipeFrom\\",
                                      \\"children\\": {
                                        \\"RelationExpression\\": [
                                          {
                                            \\"name\\": \\"RelationExpression\\",
                                            \\"children\\": {
                                              \\"Expression\\": [
                                                {
                                                  \\"name\\": \\"Expression\\",
                                                  \\"children\\": {
                                                    \\"Term\\": [
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"1\\",
                                                                    \\"startOffset\\": 18,
                                                                    \\"endOffset\\": 18,
                                                                    \\"startLine\\": 3,
                                                                    \\"endLine\\": 3,
                                                                    \\"startColumn\\": 7,
                                                                    \\"endColumn\\": 7,
                                                                    \\"tokenTypeIdx\\": 4,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 4,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                },
                                                {
                                                  \\"name\\": \\"Expression\\",
                                                  \\"children\\": {
                                                    \\"Term\\": [
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"NumberLiteral\\": [
                                                                  {
                                                                    \\"image\\": \\"10\\",
                                                                    \\"startOffset\\": 22,
                                                                    \\"endOffset\\": 23,
                                                                    \\"startLine\\": 3,
                                                                    \\"endLine\\": 3,
                                                                    \\"startColumn\\": 11,
                                                                    \\"endColumn\\": 12,
                                                                    \\"tokenTypeIdx\\": 4,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"NumberLiteral\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 4,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ],
                                              \\"TildeToken\\": [
                                                {
                                                  \\"image\\": \\"~\\",
                                                  \\"startOffset\\": 20,
                                                  \\"endOffset\\": 20,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 9,
                                                  \\"endColumn\\": 9,
                                                  \\"tokenTypeIdx\\": 33,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"TildeToken\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 33,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"tail\\": [
                                    {
                                      \\"name\\": \\"PipeTail\\",
                                      \\"children\\": {
                                        \\"PipeToken\\": [
                                          {
                                            \\"image\\": \\"|>\\",
                                            \\"startOffset\\": 25,
                                            \\"endOffset\\": 26,
                                            \\"startLine\\": 3,
                                            \\"endLine\\": 3,
                                            \\"startColumn\\": 14,
                                            \\"endColumn\\": 15,
                                            \\"tokenTypeIdx\\": 34,
                                            \\"tokenType\\": {
                                              \\"name\\": \\"PipeToken\\",
                                              \\"PATTERN\\": {},
                                              \\"tokenTypeIdx\\": 34,
                                              \\"CATEGORIES\\": [],
                                              \\"categoryMatches\\": [],
                                              \\"categoryMatchesMap\\": {},
                                              \\"isParent\\": false
                                            }
                                          }
                                        ],
                                        \\"toEach\\": [
                                          {
                                            \\"name\\": \\"Each\\",
                                            \\"children\\": {
                                              \\"EachToken\\": [
                                                {
                                                  \\"image\\": \\"each:\\",
                                                  \\"startOffset\\": 28,
                                                  \\"endOffset\\": 32,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 17,
                                                  \\"endColumn\\": 21,
                                                  \\"tokenTypeIdx\\": 30,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"EachToken\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 30,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ],
                                              \\"Identifier\\": [
                                                {
                                                  \\"image\\": \\"i\\",
                                                  \\"startOffset\\": 34,
                                                  \\"endOffset\\": 34,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 23,
                                                  \\"endColumn\\": 23,
                                                  \\"tokenTypeIdx\\": 8,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"Identifier\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 8,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ],
                                              \\"LCurly\\": [
                                                {
                                                  \\"image\\": \\"{\\",
                                                  \\"startOffset\\": 36,
                                                  \\"endOffset\\": 36,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 25,
                                                  \\"endColumn\\": 25,
                                                  \\"tokenTypeIdx\\": 11,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"LCurly\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 11,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false,
                                                    \\"LABEL\\": \\"{\\"
                                                  }
                                                }
                                              ],
                                              \\"Program\\": [
                                                {
                                                  \\"name\\": \\"Program\\",
                                                  \\"children\\": {
                                                    \\"Assignment\\": [
                                                      {
                                                        \\"name\\": \\"Assignment\\",
                                                        \\"children\\": {
                                                          \\"ToRight\\": [
                                                            {
                                                              \\"name\\": \\"ToRight\\",
                                                              \\"children\\": {
                                                                \\"from\\": [
                                                                  {
                                                                    \\"name\\": \\"Pipe\\",
                                                                    \\"children\\": {
                                                                      \\"from\\": [
                                                                        {
                                                                          \\"name\\": \\"PipeFrom\\",
                                                                          \\"children\\": {
                                                                            \\"RelationExpression\\": [
                                                                              {
                                                                                \\"name\\": \\"RelationExpression\\",
                                                                                \\"children\\": {
                                                                                  \\"Expression\\": [
                                                                                    {
                                                                                      \\"name\\": \\"Expression\\",
                                                                                      \\"children\\": {
                                                                                        \\"Term\\": [
                                                                                          {
                                                                                            \\"name\\": \\"Term\\",
                                                                                            \\"children\\": {
                                                                                              \\"Factor\\": [
                                                                                                {
                                                                                                  \\"name\\": \\"Factor\\",
                                                                                                  \\"children\\": {
                                                                                                    \\"Identifier\\": [
                                                                                                      {
                                                                                                        \\"image\\": \\"i\\",
                                                                                                        \\"startOffset\\": 46,
                                                                                                        \\"endOffset\\": 46,
                                                                                                        \\"startLine\\": 4,
                                                                                                        \\"endLine\\": 4,
                                                                                                        \\"startColumn\\": 9,
                                                                                                        \\"endColumn\\": 9,
                                                                                                        \\"tokenTypeIdx\\": 8,
                                                                                                        \\"tokenType\\": {
                                                                                                          \\"name\\": \\"Identifier\\",
                                                                                                          \\"PATTERN\\": {},
                                                                                                          \\"tokenTypeIdx\\": 8,
                                                                                                          \\"CATEGORIES\\": [],
                                                                                                          \\"categoryMatches\\": [],
                                                                                                          \\"categoryMatchesMap\\": {},
                                                                                                          \\"isParent\\": false
                                                                                                        }
                                                                                                      }
                                                                                                    ]
                                                                                                  }
                                                                                                }
                                                                                              ]
                                                                                            }
                                                                                          }
                                                                                        ]
                                                                                      }
                                                                                    }
                                                                                  ]
                                                                                }
                                                                              }
                                                                            ]
                                                                          }
                                                                        }
                                                                      ],
                                                                      \\"tail\\": [
                                                                        {
                                                                          \\"name\\": \\"PipeTail\\",
                                                                          \\"children\\": {
                                                                            \\"PipeToken\\": [
                                                                              {
                                                                                \\"image\\": \\"|>\\",
                                                                                \\"startOffset\\": 48,
                                                                                \\"endOffset\\": 49,
                                                                                \\"startLine\\": 4,
                                                                                \\"endLine\\": 4,
                                                                                \\"startColumn\\": 11,
                                                                                \\"endColumn\\": 12,
                                                                                \\"tokenTypeIdx\\": 34,
                                                                                \\"tokenType\\": {
                                                                                  \\"name\\": \\"PipeToken\\",
                                                                                  \\"PATTERN\\": {},
                                                                                  \\"tokenTypeIdx\\": 34,
                                                                                  \\"CATEGORIES\\": [],
                                                                                  \\"categoryMatches\\": [],
                                                                                  \\"categoryMatchesMap\\": {},
                                                                                  \\"isParent\\": false
                                                                                }
                                                                              }
                                                                            ],
                                                                            \\"toIdentifier\\": [
                                                                              {
                                                                                \\"image\\": \\"console\\",
                                                                                \\"startOffset\\": 51,
                                                                                \\"endOffset\\": 57,
                                                                                \\"startLine\\": 4,
                                                                                \\"endLine\\": 4,
                                                                                \\"startColumn\\": 14,
                                                                                \\"endColumn\\": 20,
                                                                                \\"tokenTypeIdx\\": 8,
                                                                                \\"tokenType\\": {
                                                                                  \\"name\\": \\"Identifier\\",
                                                                                  \\"PATTERN\\": {},
                                                                                  \\"tokenTypeIdx\\": 8,
                                                                                  \\"CATEGORIES\\": [],
                                                                                  \\"categoryMatches\\": [],
                                                                                  \\"categoryMatchesMap\\": {},
                                                                                  \\"isParent\\": false
                                                                                }
                                                                              }
                                                                            ]
                                                                          }
                                                                        }
                                                                      ]
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ],
                                              \\"RCurly\\": [
                                                {
                                                  \\"image\\": \\"}\\",
                                                  \\"startOffset\\": 65,
                                                  \\"endOffset\\": 65,
                                                  \\"startLine\\": 5,
                                                  \\"endLine\\": 5,
                                                  \\"startColumn\\": 7,
                                                  \\"endColumn\\": 7,
                                                  \\"tokenTypeIdx\\": 12,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"RCurly\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 12,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false,
                                                    \\"LABEL\\": \\"}\\"
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            },
            {
              \\"name\\": \\"BlockStatement\\",
              \\"children\\": {
                \\"statement\\": [
                  {
                    \\"name\\": \\"Assignment\\",
                    \\"children\\": {
                      \\"ToRight\\": [
                        {
                          \\"name\\": \\"ToRight\\",
                          \\"children\\": {
                            \\"from\\": [
                              {
                                \\"name\\": \\"Pipe\\",
                                \\"children\\": {
                                  \\"from\\": [
                                    {
                                      \\"name\\": \\"PipeFrom\\",
                                      \\"children\\": {
                                        \\"RelationExpression\\": [
                                          {
                                            \\"name\\": \\"RelationExpression\\",
                                            \\"children\\": {
                                              \\"Expression\\": [
                                                {
                                                  \\"name\\": \\"Expression\\",
                                                  \\"children\\": {
                                                    \\"Term\\": [
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"Identifier\\": [
                                                                  {
                                                                    \\"image\\": \\"x\\",
                                                                    \\"startOffset\\": 86,
                                                                    \\"endOffset\\": 86,
                                                                    \\"startLine\\": 7,
                                                                    \\"endLine\\": 7,
                                                                    \\"startColumn\\": 7,
                                                                    \\"endColumn\\": 7,
                                                                    \\"tokenTypeIdx\\": 8,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"Identifier\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 8,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      },
                                                      {
                                                        \\"name\\": \\"Term\\",
                                                        \\"children\\": {
                                                          \\"Factor\\": [
                                                            {
                                                              \\"name\\": \\"Factor\\",
                                                              \\"children\\": {
                                                                \\"Identifier\\": [
                                                                  {
                                                                    \\"image\\": \\"x\\",
                                                                    \\"startOffset\\": 90,
                                                                    \\"endOffset\\": 90,
                                                                    \\"startLine\\": 7,
                                                                    \\"endLine\\": 7,
                                                                    \\"startColumn\\": 11,
                                                                    \\"endColumn\\": 11,
                                                                    \\"tokenTypeIdx\\": 8,
                                                                    \\"tokenType\\": {
                                                                      \\"name\\": \\"Identifier\\",
                                                                      \\"PATTERN\\": {},
                                                                      \\"tokenTypeIdx\\": 8,
                                                                      \\"CATEGORIES\\": [],
                                                                      \\"categoryMatches\\": [],
                                                                      \\"categoryMatchesMap\\": {},
                                                                      \\"isParent\\": false
                                                                    }
                                                                  }
                                                                ]
                                                              }
                                                            }
                                                          ]
                                                        }
                                                      }
                                                    ],
                                                    \\"AdditionOperator\\": [
                                                      {
                                                        \\"image\\": \\"-\\",
                                                        \\"startOffset\\": 88,
                                                        \\"endOffset\\": 88,
                                                        \\"startLine\\": 7,
                                                        \\"endLine\\": 7,
                                                        \\"startColumn\\": 9,
                                                        \\"endColumn\\": 9,
                                                        \\"tokenTypeIdx\\": 19,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"Minus\\",
                                                          \\"PATTERN\\": {},
                                                          \\"CATEGORIES\\": [
                                                            {
                                                              \\"name\\": \\"AdditionOperator\\",
                                                              \\"PATTERN\\": {},
                                                              \\"tokenTypeIdx\\": 17,
                                                              \\"CATEGORIES\\": [],
                                                              \\"categoryMatches\\": [
                                                                18,
                                                                19
                                                              ],
                                                              \\"categoryMatchesMap\\": {
                                                                \\"18\\": true,
                                                                \\"19\\": true
                                                              },
                                                              \\"isParent\\": true
                                                            }
                                                          ],
                                                          \\"tokenTypeIdx\\": 19,
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"tail\\": [
                                    {
                                      \\"name\\": \\"PipeTail\\",
                                      \\"children\\": {}
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"RCurly\\": [
            {
              \\"image\\": \\"}\\",
              \\"startOffset\\": 71,
              \\"endOffset\\": 71,
              \\"startLine\\": 6,
              \\"endLine\\": 6,
              \\"startColumn\\": 5,
              \\"endColumn\\": 5,
              \\"tokenTypeIdx\\": 12,
              \\"tokenType\\": {
                \\"name\\": \\"RCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 12,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"}\\"
              }
            },
            {
              \\"image\\": \\"}\\",
              \\"startOffset\\": 96,
              \\"endOffset\\": 96,
              \\"startLine\\": 8,
              \\"endLine\\": 8,
              \\"startColumn\\": 5,
              \\"endColumn\\": 5,
              \\"tokenTypeIdx\\": 12,
              \\"tokenType\\": {
                \\"name\\": \\"RCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 12,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"}\\"
              }
            }
          ],
          \\"ElseToken\\": [
            {
              \\"image\\": \\"else\\",
              \\"startOffset\\": 73,
              \\"endOffset\\": 76,
              \\"startLine\\": 6,
              \\"endLine\\": 6,
              \\"startColumn\\": 7,
              \\"endColumn\\": 10,
              \\"tokenTypeIdx\\": 32,
              \\"tokenType\\": {
                \\"name\\": \\"ElseToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 32,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ]
        }
      }
    ]
  }
}"
`;
